fix whitespace

--- a/suslab/static/css/bulletin.css
+++ b/suslab/static/css/bulletin.css
@@ -1,7 +1,3 @@
-.title {
-    text-align: center;
-}
+.title { text-align: center; }
 
-#bulletin-form-link {
-    text-align: center;
-}
+#bulletin-form-link { text-align: center; }
