--- a/suslab/static/css/form.css
+++ b/suslab/static/css/form.css
@@ -17,14 +17,14 @@
 
 /* Box Design
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.action-box{
+.action-box {
     position: absolute;
     top: 20%;
     left: 50%;
     transform: translate(-50%, -20%);
 }
 
-.box-section{
+.box-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,35 +35,35 @@
 
 /* Headings
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.title{
+.title {
     line-height: 2;
     margin: auto;
     font-size: 4rem; }
 
-.title > a{
+.title>a {
     text-decoration: none;
     color: var(--colour-dark); }
 
-.subtitle{
+.subtitle {
     font-family: var(--ff-sans);
     color: var(--colour-dark); }
 
-#logo{
+#logo {
     height: 8rem;
     margin: auto; }
 
 
 /* Form
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.login-form{ flex-direction: column; }
+.login-form { flex-direction: column; }
 
-.form-errors{
+.form-errors {
     width: 20vw;
     flex-direction: column;
     background-color: #F8F1AE;
     gap: 0; }
 
-.form-errors > h6{
+.form-errors>h6 {
     margin: 0;
     padding-left: 20px;
     font-family: var(--ff-sans);
@@ -71,7 +71,7 @@
     text-align: left;
     width: 20vw; }
 
-.form-fields{
+.form-fields {
     flex-direction: column;
     gap: 5px; }
 
@@ -82,43 +82,40 @@
 .form-fields input[type="password"],
 .form-fields input[type="date"],
 .form-fields input[type="time"],
-.form-fields textarea{
+.form-fields textarea {
     width: clamp(350px, 20vw, 500px);
     border-radius: 20px; }
 
-.form-fields textarea{
+.form-fields textarea {
     min-height: 120px;
     height: 20vh;
     resize: none; }
 
 .form-fields input::placeholder,
-.form-fields textarea::placeholder{
+.form-fields textarea::placeholder {
     color: var(--colour-accent);
     opacity: 0.8;
     font-family: var(--ff-sans); }
 
-.form-links{
+.form-links {
     font-family: var(--ff-sans);
     gap: 4em; }
 
-.form-links *{
+.form-links * {
     font-size: 1.5rem;
     font-weight: 400; }
 
-.form-links *{
-    margin: 0; }
+.form-links * { margin: 0; }
 
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media (min-width: 700px) {
-    @keyframes shake{
+    @keyframes shake {
         0%, 100% {transform: translateX(0);} 
         10%, 50% {transform: translateX(-10px);} 
         25%, 75% {transform: translateX(10px);} 
     }
 
-    .form-errors{
-        animation: shake 0.5s ease-in-out;
-    }
+    .form-errors { animation: shake 0.5s ease-in-out; }
 }
